--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
 
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script>
+      function clickHandler() {
+        location.reload();
+      }
+    </script>
   
 </head>
 <body>
